[package]
name = "blog-autopost-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
feed-rs = "2.3.1"
oauth1-request = "0.6.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "multipart", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tower-http = { version = "0.7.0", features = ["fs", "cors"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.27.0"
