[package]
name = "blog-autopost-rs"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
feed-rs = "2.3.1"
oauth1-request = "0.6.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "multipart", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tower-http = { version = "0.7.0", features = ["fs", "cors"] }
urlencoding = "2.1.3"
image = "0.25.5"
tempfile = "3.12.0"
bcrypt = "0.19.2"
fd-lock = "4.0.2"
tokio-stream = { version = "0.1.17", features = ["sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# test-util はテストで tokio の時間を進めるために使う(リトライ待機の省略)
tokio = { version = "1.52.3", features = ["full", "test-util"] }
wiremock = "0.6.2"
tower = { version = "0.5.3", features = ["util"] }

