[project]
name = "blog-autopost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "tweepy>=4.16.0",
    "atproto>=0.0.61",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "apscheduler",
    "itsdangerous",
    "sqlalchemy",
    "starlette-csrf>=3.0.0",
]

[project.scripts]
blog-autopost = "src.main:main"

[tool.uv]
package = true
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest-order>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
