[project]
name = "blog-autopost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "tweepy>=4.16.0",
    "atproto>=0.0.65",
    "beautifulsoup4>=4.14.3",
    "pillow>=11.3.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "apscheduler>=3.11.2",
    "itsdangerous",
    "sqlalchemy",
    "starlette-csrf>=3.0.0",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.6",
    "idna>=3.11",
    "click>=8.3.1",
    "dnspython>=2.8.0",
    "iniconfig>=2.3.0",
    "anyio>=4.12.1",
    "coverage>=7.13.4",
    "cryptography>=46.0.5",
    "httptools>=0.7.1",
    "bcrypt>=4.3.0",
]

[project.scripts]
blog-autopost = "src.main:main"

[tool.uv]
package = true
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest-order>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pytest-xdist",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
