[project]
name = "blog-autopost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "tweepy>=4.17.0",
    "atproto>=0.0.69",
    "beautifulsoup4>=4.15.0",
    "pillow>=11.3.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "apscheduler>=3.11.2",
    "itsdangerous",
    "sqlalchemy",
    "starlette-csrf>=3.0.0",
    "cryptography>=46.0.5",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
]

[project.scripts]
blog-autopost = "src.main:main"

[tool.uv]
package = true
[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "mypy>=2.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-order>=1.3.0",
    "pytest-xdist",
    "pytest-timeout",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "coverage>=7.15.1",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
